# cpp-console-app

./: Auth.cpp  Auth.cpp.bak  Auth.h  CMakeLists.txt  Common.hpp  README.md  Travel.cpp  Travel.h  TravelTable.cpp  TravelTable.h  User.cpp  User.h  UserTable.cpp  UserTable.h  main.cpp
Project1/: Kursovaya.sln
Project1/Project1/: Project1.vcxproj  Project1.vcxproj.filters  users.txt
Project1/Project1/Debug/: Kursovaya.exe.recipe  Kursovaya.ilk  Project1.exe.recipe  vc143.idb
Project1/Project1/Debug/Kursovaya.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
